# mixingbowl

./: .gitignore  LICENSE  README.md  docker-compose.yaml  promtail-config.yaml
.github/workflows/: README.md  docker-deploy.yaml  python-app.yml
backend/: Dockerfile  build.gradle  settings.gradle
backend/src/main/java/com/mixingbowl/: MixingBowlApplication.java
backend/src/main/java/com/mixingbowl/auth/: AuthSuccessHandler.java  PrincipalDetails.java  PrincipalDetailsService.java
backend/src/main/java/com/mixingbowl/config/: AppConfig.java  SecurityConfig.java  WebConfig.java
backend/src/main/java/com/mixingbowl/filter/: JwtAuthenticationFilter.java
backend/src/main/java/com/mixingbowl/oauth/: GoogleUserDetails.java  OAuth2SuccessHandler.java  OAuth2UserInfo.java  PrincipalOauth2UserService.java
backend/src/main/java/com/mixingbowl/recipe/controller/: RecipeController.java
backend/src/main/java/com/mixingbowl/recipe/domain/: Recipe.java
backend/src/main/java/com/mixingbowl/recipe/repository/: RecipeRepository.java
backend/src/main/java/com/mixingbowl/recipe/service/: RecipeService.java
backend/src/main/java/com/mixingbowl/user/controller/: UserController.java
backend/src/main/java/com/mixingbowl/user/domain/: UserDto.java  Users.java
backend/src/main/java/com/mixingbowl/user/repository/: UserRepository.java
backend/src/main/java/com/mixingbowl/user/service/: UserService.java
backend/src/main/java/com/mixingbowl/util/: ApiResponse.java  JwtUtil.java
backend/src/main/resources/: application-oauth.yml  application.yml
backend/src/test/java/com/mixingbowl/: MixingBowlApplicationTests.java
frontend/: index.html  package-lock.json
frontend/src/: App.vue  main.js
frontend/src/components/: AuthForm.vue  AuthForm2.vue  HelloWorld.vue  LoginModal.vue  RecipeResults.vue  RecipeSearchForm.vue
frontend/src/router/: index.js
frontend/src/services/: auth.js
frontend/src/store/: auth.js
frontend/src/views/: LoginView.vue  RecipeSearchView.vue  RegisterView.vue
nlp-server/: Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  wsgi.py
nlp-server/app/: __init__.py  config.py
nlp-server/app/api/: routes.py
nlp-server/app/services/: naver_service.py  nlp_service.py
nlp-server/prometheus/: prometheus.yaml
nlp-server/tests/: test_api.py  test_services.py
prometheus/: prometheus.yml
server-setup/: README.md  server-start.sh  server-status.sh  server-stop.sh
