[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixingbowl-nlp"
version = "0.1.0"
description = "NLP 서버 for Mixing Bowl Project"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Mixing Bowl Team" }
]
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
    "konlpy>=0.6.0",
    "gunicorn>=20.1.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.4",
    "spacy>=3.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[tool.hatch.envs.mixing_dev]
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
    "konlpy>=0.6.0",
    "gunicorn>=20.1.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.4",
    "spacy>=3.7.4",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
